objects/BMCServiceDesk__BMC_BaseElement__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__LicenseType__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicensesAvailable__c</fullName>
        <label>Licenses Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Link_Technology__c</fullName>
        <label>Link Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Token Ring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueTooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Longitude__c</fullName>
        <label>Longitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Low_Water_Mark__c</fullName>
        <label>Low Water Mark</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MailStop__c</fullName>
        <label>Mail Stop</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManagementAddress__c</fullName>
        <label>Management Address</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to mark this instance as soft deleted. You can exclude it from searches and other activities by using the MarkAsDeleted attribute in your conditions. Additionally, you can preserve its relationships for future reuse.</inlineHelpText>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkingTechnology__c</fullName>
        <label>Marking Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophotographic LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophotographic Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophotographic Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Dot Matrix 9pin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Dot Matrix 24pin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Dot Matrix Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Fully Formed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Band</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet Aqueous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Sensitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Diffusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electroerosion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrostatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Microfiche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Imagesetter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ion Deposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBeam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typesetter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxBlockSize__c</fullName>
        <label>Maximum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxClockSpeed__c</fullName>
        <label>Maximum Clock Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxConsumption__c</fullName>
        <label>Maximum Consumption</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxMediaSize__c</fullName>
        <label>Maximum Media Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfNodes__c</fullName>
        <label>Maximum Number Of Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfProcesses__c</fullName>
        <label>Maximum Number Of Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxProcessMemorySize__c</fullName>
        <label>Maximum Process Memory Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Component_Length__c</fullName>
        <label>Maximum Component Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Consumable_Resource__c</fullName>
        <label>Maximum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Speed__c</fullName>
        <label>Maximum Speed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Maximum_Allowed__c</fullName>
        <label>Maximum Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaSupported__c</fullName>
        <label>Media Supported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaType__c</fullName>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>Removable media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed hard disk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MemoryType__c</fullName>
        <label>Memory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synchronous DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cache DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEPROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEPROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MinBlockSize__c</fullName>
        <label>Minimum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Min_Consumable_Resource__c</fullName>
        <label>Minimum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Model__c</fullName>
        <inlineHelpText>Use this field to enter the name by which the entity represented by the instance is generally known. For example, the model name of an Acme widget might be Pro Widget 2000.</inlineHelpText>
        <label>Model</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NameFormat__c</fullName>
        <label>NameFormat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Name__c</fullName>
        <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the instance.</inlineHelpText>
        <label>Instance Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NetworkID__c</fullName>
        <label>Network ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Network_Addresses__c</fullName>
        <label>Network Addresses</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Network_Number__c</fullName>
        <label>Network Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Node_Descriptor__c</fullName>
        <label>Node Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Notes__c</fullName>
        <inlineHelpText>Use this field to enter general notes about the instance.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberChannels__c</fullName>
        <label>Number Of Channels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfCores__c</fullName>
        <label>Number Of Cores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfLPARS__c</fullName>
        <label>Number Of LPARS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfLogicalProcessors__c</fullName>
        <label>Number Of Logical Processors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfMediaSupported__c</fullName>
        <label>Number Of Media Supported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfSlots__c</fullName>
        <label>Number Of Slots</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfTrays__c</fullName>
        <label>Number Of Trays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Blocks__c</fullName>
        <label>Number of Blocks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Buttons__c</fullName>
        <label>Number of Buttons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Power_Cords__c</fullName>
        <label>Number of Power Cords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSLanguage__c</fullName>
        <label>OS Language</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSProductSuite__c</fullName>
        <label>OS Product Suite</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BackOffice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminal Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business (Restricted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSType__c</fullName>
        <label>OS Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MACOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTUNIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DECNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tru64 UNIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open VMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z/OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSDOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIN3x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIN95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIN98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCR3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetWare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC/OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliant UNIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO UnixWare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO Open Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sequent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OfferingType__c</fullName>
        <label>Offering Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requestable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OfficePhone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Organization__c</fullName>
        <label>Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherCapabilityDescription__c</fullName>
        <label>Other Capability Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherProcessorFamilyDescription__c</fullName>
        <label>Other Processor Family Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherSoftwareServerType__c</fullName>
        <label>Other Software Server Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherTypeDescription__c</fullName>
        <label>Other Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Other_Resource_Type__c</fullName>
        <label>Other Resource Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OwnerContact__c</fullName>
        <label>OwnerContact</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OwnerName__c</fullName>
        <label>OwnerName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Owner__c</fullName>
        <formula>BMCServiceDesk__Service_Owner__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PAEEnabled__c</fullName>
        <label>PAE Enabled</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PNPDeviceID__c</fullName>
        <label>PNP Device ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PROD_ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerEmail__c</fullName>
        <label>Pager Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerPINNumber__c</fullName>
        <label>Pager PIN Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerParams1__c</fullName>
        <label>Pager Parameters 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerParams2__c</fullName>
        <label>Pager Parameters 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerPhoneNumber__c</fullName>
        <label>Pager Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerProvider__c</fullName>
        <label>Pager Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerSoftware__c</fullName>
        <label>Pager Software</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerType__c</fullName>
        <label>Pager Type</label>
        <picklist>
            <picklistValues>
                <fullName>Numeric Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PaperSizesSupported__c</fullName>
        <label>Paper Sizes Supported</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ParentCITag__c</fullName>
        <label>ParentCITag</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Parent_Service__c</fullName>
        <formula>BMCServiceDesk__FKBusinessService__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Partitions__c</fullName>
        <label>Partitions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PatchNumber__c</fullName>
        <label>Patch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Path_Name__c</fullName>
        <label>Path Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Per_Time_Period__c</fullName>
        <label>Per Time Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonAdditionalDetails__c</fullName>
        <label>Person Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonDepartment__c</fullName>
        <label>Person Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonId__c</fullName>
        <label>Person ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonRegion__c</fullName>
        <label>Person Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PhysicalMemory__c</fullName>
        <label>Physical Memory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PhysicalPosition__c</fullName>
        <label>Physical Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Physical_Description__c</fullName>
        <label>Physical Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pixels_Per_X_Logical_Inch__c</fullName>
        <label>Pixels Per X Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pixels_Per_Y_Logical_Inch__c</fullName>
        <label>Pixels Per Y Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pointing_Type__c</fullName>
        <label>Pointing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track Ball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glide Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Touch Pad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Touch Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mouse - Optical Sensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pool_ID__c</fullName>
        <label>Pool ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PortName__c</fullName>
        <label>Port Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PortNumber__c</fullName>
        <label>Port Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Port_Type__c</fullName>
        <label>Port Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Token Ring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>